[metadata]
name = sandag_rsm
url = https://github.com/SANDAG/RSM

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.19
    pandas
    scikit-learn
    geopandas
    libpysal
    pyproj
    plotly
    networkx


[flake8]
exclude =
    .git,
    __pycache__,
    docs/_build,
    sandag_rsm/__init__.py
max-line-length = 160
extend-ignore = E203, E731
